<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddQuestView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/aaqv_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/aaqv_et_decription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description" />


        <EditText
            android:id="@+id/aaqv_et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_do_it"
            android:inputType="date" />


        <CheckBox
            android:id="@+id/aaqv_cb_every_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/every_day" />

        <Button
            android:id="@+id/aaqv_btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_task" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>