<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.InfoView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/main_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_quest"
            android:textSize="@dimen/hit_text" />

        <TextView
            android:id="@+id/aiv_name_tack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_quest"
            android:textSize="@dimen/hit_text" />

        <TextView
            android:id="@+id/aiv_description_tack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dead_line"
            android:textSize="@dimen/hit_text" />

        <TextView
            android:id="@+id/aiv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/aiv_btn_dell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dell_task"
                tools:ignore="MissingConstraints" />

            <Button
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/aiv_btn_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complete_task"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>